Manage several profile templates
